vendor/ocaml/testsuite/tests/typing-missing-cmi/main.ml
let _ = A.a = B.b
